[package]
authors = ["ZeroTier, Inc. <contact@zerotier.com>", "Adam Ierymenko <adam.ierymenko@zerotier.com>", "Monica Moniot <monica.moniot@zerotier.com>"]
edition = "2021"
license = "MPL-2.0"
name = "zssp-proto"
version = "0.1.0"

[lib]
name = "zssp_proto"
path = "src/lib.rs"
doc = true

[dependencies]
rand_core = "0.6.4"
zeroize = { version = "1.6.0", default-features = false}

pqc_kyber = { version = "0.6.0", default-features = false, features = ["kyber1024", "std"], optional = true }
aes-gcm = { version = "0.10.2", optional = true}
aes = { version = "0.8.3", optional = true}
p384 = { version = "0.13.0", optional = true}
sha2 = { version = "0.10.7", optional = true}
hmac = { version = "0.12.1", optional = true}

[features]
default = ["debug", "aes-gcm", "p384", "sha2", "hmac", "pqc_kyber"]
aes = ["dep:aes"]
aes-gcm = ["dep:aes-gcm", "aes"]
sha2 = ["dep:sha2"]
hmac = ["dep:hmac", "sha2"]
logging = []
debug = ["logging"]
