[package]
authors = ["ZeroTier, Inc. <contact@zerotier.com>", "Adam Ierymenko <adam.ierymenko@zerotier.com>", "Monica Moniot <monica.moniot@zerotier.com>"]
edition = "2021"
license = "MPL-2.0"
name = "zssp"
version = "0.0.3"

[lib]
name = "zssp"
path = "src/lib.rs"
doc = true

[dependencies]
pqc_kyber = { version = "0.6.0", default-features = false, features = ["kyber1024", "std"] }
rand_core = "0.6.4"
zeroize = { version = "1.6.0" }
arrayvec = { version = "0.7.4", default-features = false, features = ["std", "zeroize"] }
