[package]
authors = ["ZeroTier, Inc. <contact@zerotier.com>", "Adam Ierymenko <adam.ierymenko@zerotier.com>", "Monica Moniot <monica.moniot@zerotier.com>"]
edition = "2021"
license = "MPL-2.0"
name = "zssp"
version = "0.0.3"

[lib]
name = "zssp"
path = "src/lib.rs"
doc = true

[profile.bench]
debug = true

[dependencies]
rand_core = { version = "0.6.4" }
zeroize = { version = "1.6.0" }
arrayvec = { version = "0.7.4", default-features = false, features = ["std", "zeroize"] }
pqc_kyber = { version = "0.7.1", default-features = false, features = ["kyber1024", "std"], optional = true }
p384 = { version = "0.13.0", default-features = false, features = ["ecdh"], optional = true }
sha2 = { version = "0.10.7", default-features = false, optional = true }
hmac = { version = "0.12.1", default-features = false, optional = true }
openssl-sys = { version = "0.9.91", default-features = false, optional = true }
serde = { version = "1.0", default-features = false, optional = true }

[features]
default = ["debug", "default-crypto"]
default-crypto = ["p384", "sha2", "pqc_kyber", "openssl-sys", "rand_core/getrandom"]
sha2 = ["dep:sha2", "dep:hmac"]
logging = []
debug = ["logging"]
